css/style.css
/* ... */
div.web .scroll-space {
	margin: 0 auto;
	position: relative;
	right: 2.2%;
}

div.web .scroll-space img {
	width: 100%;
	margin-top: 30%;
}

div.apparel .scroll-space img {
	margin-top: 90%;
	margin: 90% 0 10% 10%;
	max-width: 90%;
}

div.apparel .scroll-space:nth-child(2) img {
	margin-left: 0;
}

div.apparel .scroll-space,
div.print .scroll-space {
	position: relative;
	overflow-y: scroll;
	overflow-x: hidden;
}

div.apparel .scroll-space:nth-child(1) {
	left: 55%;
}

div.apparel .scroll-space:nth-child(2) {
	left: 14.75%;
}

div.apparel p.scroll {
	text-align: center;
	vertical-align: middle;
	margin: 0;
}

div.apparel div.panel-container {
	overflow: visible;
}

div.print .scroll-space {
	left: 56.82%;
}

div.print img {
	margin: 100% 0 0 0;
}

div.print p {
	text-align: center;
	margin-top: 100%;
}

div.music img {
	margin: 70% 0 0 0;
	max-height: 100%;
}

div.music p {
	text-align: center;
	margin-top: 43%;
}

body.audio #panel-2 {
	padding: 75px 0;
	background: rgba( 0,0,0,.9 );
}

body.audio #panel-2 h2 {
	text-transform: uppercase;
	font-weight: normal;
	font-size: 108px;
	font-family: "Didot W02 Roman";
	margin: 0 0 41px;
	text-align: center;
}

body.audio #panel-2 h2 span {
	font-family: "Didot W02 Italic";
}

div.what-we-do-grid {
	margin: 0 auto;
}

div.what-we-do {
	float: left;
	width: 22%;
	margin-right: 3%;
}

div.what-we-do h3 {
	letter-spacing: 3px;
	color: #0047BB;
	text-transform: uppercase;
	font-weight: 500;
	font-family: 'futura-pt', Futura, "Trebuchet MS", Arial, sans-serif;
	margin: 0;
}

div.what-we-do p {
	margin-top: 6px;
	font-size: 20px;
}

body.audio #panel-3 p {
	position: absolute;
	z-index: 1;
	margin-right: 5%;
	margin-top:0;
}

body.audio #panel-3 div.grid-item:nth-child(even) p {
}

body.audio #panel-4 {
	background: url(../img/studio-gallery-panel-bg.png) no-repeat;
	-webkit-background-size: 100% auto;
	-moz-background-size: 100% auto;
	-o-background-size: 100% auto;
	background-size: 100% auto;
}

canvas#studio,
canvas#gallery,
canvas#studio-gallery-link {
	position: relative;
	z-index: 1;
	opacity: .95;
	margin: 0 auto;
	display: block;
	cursor: pointer;
	float:left;
}

div.studio {
	width: 1018px;
	height: 368px;
	display: block;
	float:left;
	cursor: pointer
}

div.studio-top,
div.studio-bottom {
	width:100%;
	float: left;
	height: 140px;
	background: rgba( 0,0,0,.86 );
	position: relative;
}

div.studio-left {
	float: left;
	position: relative;
	height: 368px;
	min-width: 100px;
	background: rgba( 0,0,0,.86 );
}

div.studio-right {
	float: right;
	position: relative;
	height: 368px;
	min-width: 100px;
	background: rgba( 0,0,0,.86 );
}

canvas#studio-gallery-link {
	margin-top: -180px;
	opacity.86
}

#arrow {
	display: none
}

.mfp-container img {
	display: block;
	max-height: 90%;
	margin: 0 auto;
}

canvas#g,
canvas#ear,
canvas#list,
canvas#gear-list-link {
	position: relative;
	z-index: 1;
	opacity: .95;
	margin: 0 auto;
	display: block;
	cursor: pointer;
	float:left;
}

div.gear {
	width: 878px;
	height: 368px;
	display: block;
	float:left;
	cursor: pointer
}

div.gear-top,
div.gear-bottom {
	width:100%;
	float: left;
	height: 140px;
	background: rgba( 0,0,0,.85 );
	position: relative;
}

div.gear-left {
	float: left;
	position: relative;
	height: 368px;
	min-width: 100px;
	background: rgba( 0,0,0,.85 );
}

div.gear-right {
	float: right;
	position: relative;
	height: 368px;
	min-width: 100px;
	background: rgba( 0,0,0,.85 );
}

canvas#gear-list-link {
	margin-top: -135px;
	opacity: 0.86;
}

#gear-list {
	background: rgba( 0, 0, 0, .98 );
	max-width: 80%;
	width: 1000px;
	margin: 0 auto;
	font-size: 16px;
}

.column {
	float: left;
	width: 40%;
	margin: 5%;
	font-family : 'myriad-pro', 'Myriad Pro', Myriad, sans-serif;
}

.column h3 {
	color: #0047BB;
	margin: 0;
}

.column p {
	margin-top: 0;
}

.column .chunk {
	margin: 2em 0;
}

